WebKit: Add 'application/x-snkp' to StringsNotToBeLocalized.txt.

Reviewed by Darin Adler.

* StringsNotToBeLocalized.txt:

WebKit/mac: REGRESSION (r66156): Sites using AppleConnect for authentication fail to log in.
https://bugs.webkit.org/show_bug.cgi?id=44865

Reviewed by Darin Adler.

After http://trac.webkit.org/changeset/66156, sites using the AppleConnect plug-in
for authentication fail to log in. This is due to a bug in AppleConnect that r66156
exposed, but since this will have a significant impact on users of WebKit nightly
builds, a plugin-specific hack should be added while the underlying issue is being
addressed.

* WebCoreSupport/WebFrameLoaderClient.mm:
(WebFrameLoaderClient::createPlugin): Convert plug-in parameter names to lowercase
if the plugin is of type 'application/x-snkp'.



Canonical link: https://commits.webkit.org/57200@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66437 268f45cc-cd09-0410-ab3c-d52691b4dbfc